fixed overflow issues with notes

--- a/notes/src/components/notes.css
+++ b/notes/src/components/notes.css
@@ -5,6 +5,7 @@ h1 {
 .full-container {
   display: flex;
   background: #f0eff0;
+  background-size: cover;
   color: #3b3b3b;
   height: 100vh;
   max-width: 1100px;
@@ -19,9 +20,13 @@ h1 {
   padding: 10px;
   width: 250px;
   background: #cecdce;
+  background-size: cover;
 }
 
 .right-div {
+  overflow: ellipsis;
+  overflow-y: auto;
+  overflow-x: ellipsis;
   padding: 20px;
   padding-right: 20px;
   text-align: left;
@@ -67,6 +72,7 @@ h1 {
   height: 150px;
   cursor: pointer;
   user-select: none;
+  overflow: hidden;
 }
 
 .notes-text-div {
